<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlueTooth</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_enable">EnableActivity</string>
    <string name="title_activity_discover_devices">DiscoverDevicesActivity</string>
    <!-- DiscoverBlueTooth activity -->
     <string name="initial_discoverable_state">No discoverable state known</string>
     <string name="initial_discovery_state">Not discovering</string>
    <string name="be_discoverable">Be discoverable</string>
    <string name="start_discovery">Start Discovering</string>
<!-- Commmunication activity -->
    <string name="btn_add">Send</string>
    <string name="btn_start_service">Start</string>
    <string name="btn_stop_service">Stop</string>
    <string name="btn_kill_service">Kill</string>
    <string name="edt_dosomething">Enter a text</string>
    <string name="hello_world">Hello BlueTooth!</string>
</resources>