<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DiscoverDevicesActivity" >

    <TextView
        android:id="@+id/txv_discoverable_state"
        style="@style/styleSmallTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/initial_discoverable_state" />

    <Button
        android:id="@+id/btn_be_discoverable"
        style="@style/styleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:enabled="false"
        android:text="@string/be_discoverable" />

    <TextView
        android:id="@+id/txv_discovery_state"
        style="@style/styleSmallTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/initial_discovery_state" />

    <Button
        android:id="@+id/btn_start_discovery"
        style="@style/styleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:enabled="false"
        android:text="@string/start_discovery" />

    <ListView
        android:id="@+id/lsv_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txv_discover_log"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/hello_world" />

</LinearLayout>